pxc/tests/test_001_px/synerr1.px
import common -;

public namespace synerr1;

struct foo {
  int v;
  function {t} void m1(t x) {
    function {s} add(s w) { // error: typename is missing
      v += w;
    }
    add(x);
    // v += x;
  }
}

foo f;
int iv = 100;
long lv = 200;
ulong ulv = 300;
f.m1(iv);
f.m1(lv);
f.m1(ulv);
println(f.v);
